# FIT

./: .gitignore  FEEDBACK.md  README.md  SCORING.md  fit_generator.py  fit_split.py  pyproject.toml
docs/pages/: document.md  driver.md  index.md  measurer.md  segment.md  writer.md
docs/templates/fit/: class.md.jinja2  index.md.jinja2
prototypes/: test_doc.reconstruct.md
prototypes/close_token_maps/: close_token_maps.py
prototypes/lang_detect/: detect.py  requirements.txt
prototypes/line_map/: line_map.py  test_doc.md
prototypes/mdx_preprocessor/: mdx_preprocessor.py  verify.py
prototypes/pygments_fallback/: pygments_fallback.py  test_doc.md
spec/: 001_BASIC_MECHANICAL.md  002_MDX_PREPROCESSING.md
spec/001_basic_mechanical/: design.md  implementation-plan.md  refactor.md  requirements.md  research.md  risks.md  tests.md
spec/001_basic_mechanical/risks/: design-risks.md
spec/001_basic_mechanical/tests/: baseline-implementation.md
src/fit/: __init__.py  cli.py  document.py  driver.py  measurer.py  segment.py  writer.py
src/fit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/fit/commands/: measure.py
src/fit/commands/generate/: __init__.py  level1.py
tests/: conftest.py  test_document.py  test_driver.py  test_fit_generator.py  test_measurer.py  test_segment.py  test_writer.py
